--- a/index.html
+++ b/index.html
@@ -14,21 +14,29 @@
             width: 100%;
         }
         .control-btn {
-            width: 50px;
-            height: 50px;
+            width: 100px;
+            height: 100px;
             border-radius: 50%;
             background-color: #333;
             color: #fff;
             text-align: center;
-            line-height: 50px;
+            line-height: 100px; /* Adjusted this value to be equal to the height */
             position: absolute;
-            bottom: 20px;
-            font-size: 24px;
+            margin-top: 30px;
+            font-size: 46px;
             cursor: pointer;
             user-select: none;
-            display: none; /* Initially set to not display */
+            display: none;
         }
-
+        .noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+}
         #left-btn {
             left: 20px;
         }
@@ -53,8 +61,8 @@
 <body>
     <h1 style="text-align: center;">Пинг Понг</h1>
     <canvas id="pingPongCanvas" ></canvas>
-    <div id="left-btn" class="control-btn">←</div>
-    <div id="right-btn" class="control-btn">→</div>
+    <div id="left-btn" class="control-btn noselect">←</div>
+    <div id="right-btn" class="control-btn noselect">→</div>
     <script>
         const canvas = document.getElementById('pingPongCanvas');
         const ctx = canvas.getContext('2d');
